# Automation-Hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.json
automation/: README.md  config.example.json  requirements.txt
automation/contracts/: process_contratti.py  run_process_contratti.cmd
automation/gmail_drafts/: create_gmail_draft.py  run_create_gmail_draft.cmd
automation/invoices/: process_fatture.py  run_process_fatture.cmd  run_process_fatture_scheduled.cmd
automation/shared/: __init__.py  config.py  report.py
automation/tests/: helpers.py  test_create_gmail_draft.py  test_process_contratti.py  test_process_fatture.py
docs/: FAKE_WORKSPACE_REHEARSAL.md
scripts/: doctor-resources.mjs
src/: App.tsx  actions.ts  branding.ts  messages.ts  moduleReadiness.ts  nextAction.ts  styles.css  templates.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: activity.rs  automation_install.rs  branding.rs  config.rs  lib.rs  logs.rs  main.rs  paths.rs  preflight.rs  redaction.rs  setup.rs  templates.rs  workflows.rs
src/components/: AppShell.tsx  BrandingPanel.tsx  ConfirmationModal.tsx  DestinationCard.tsx  DetailsPanel.tsx  DeveloperDetails.tsx  EmptyState.tsx  FocusFlow.tsx  InfoHint.tsx  LiveOutputPanel.tsx  ModuleReadinessCards.tsx  Navigation.tsx  PageHeader.tsx  SetupStatusPanel.tsx  StatusBadges.tsx  StatusOrb.tsx  TemplateEditor.tsx  WorkflowCard.tsx  WorkflowGalleryCard.tsx  tints.ts
src/i18n/: en.ts  index.tsx  it.ts
src/routes/: HomePage.tsx  (+6 more)
(+5 files in other folders)
