[package]
name = "innpilot"
version = "0.1.0"
description = "InnPilot"
authors = ["InnPilot"]
edition = "2021"

[lib]
name = "innpilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
